Updates parameters for this workshop

--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 ---
 layout: workshop      # DON'T CHANGE THIS.
 root: .               # DON'T CHANGE THIS.
-venue: "Duke University, Room information"        # brief name of host site without address (e.g., "Euphoric State University")
-address: ""      # street address of workshop (e.g., "123 Forth Street, Blimingen, Euphoria")
+venue: "Duke University, Perkins LINK 072 (Classroom 6)"        # brief name of host site without address (e.g., "Euphoric State University")
+address: "Perkins LINK 072 (Classroom 6)"      # street address of workshop (e.g., "123 Forth Street, Blimingen, Euphoria")
 country: "US"      # country (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_3166-1)
 language: "en"     # language (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_639-1)
-latlng: ""       # fractional latitude and longitude (e.g., "41.7901128,-87.6007318"; you can use http://www.latlong.net/)
+latlng: "36.002727,-78.938496"       # fractional latitude and longitude (e.g., "41.7901128,-87.6007318"; you can use http://www.latlong.net/)
 humandate: "March 15-16, 2017"    # human-readable date (e.g., "Feb 17-18, 2020")
 humantime: "9:00am - 5:00pm"    # human-readable time (e.g., "9:00 am - 4:30 pm")
-startdate: 2017-03-08      # use YYYY-MM-DD format like 2015-01-01
-enddate: 2017-03-08        # use YYYY-MM-DD format like 2015-01-02
-instructor: ["Hilmar Lapp", "more people"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
-helper: ["more people"]     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
+startdate: 2017-03-15      # use YYYY-MM-DD format like 2015-01-01
+enddate: 2017-03-16        # use YYYY-MM-DD format like 2015-01-02
+instructor: ["Karen Cranston (Duke, Biology)", "Hilmar Lapp (Duke, GCB)", "Dan Leehr (Duke, GCB)", "R. Burke Squires (NIAID)", "Jamie Whitacre (UC Berkeley)"]
+helper: [] # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: "hilmar.lapp@duke.edu"      # contact email address for workshop organizer, such as "grace@hopper.org"
 etherpad: http://pad.software-carpentry.org/2017-03-15-duke         # optional (insert the URL for your Etherpad if you're using one)
 eventbrite:       # optional (insert the alphanumeric key for Eventbrite registration, e.g., "1234567890AB")
