Cosmetic and other small fixes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ helper: [] # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterma
 contact: "hilmar.lapp@duke.edu"      # contact email address for workshop organizer, such as "grace@hopper.org"
 etherpad: http://pad.software-carpentry.org/2017-03-15-duke         # optional (insert the URL for your Etherpad if you're using one)
 eventbrite:       # optional (insert the alphanumeric key for Eventbrite registration, e.g., "1234567890AB")
-day1_am: "Introduction and Data & Project Organization"
+day1_am: "Introduction, Data & Project Organization"
 day1_pm: "Data Exploration"
 day2_am: "Automation"
 day2_pm: "Publishing and Sharing"
@@ -65,15 +65,15 @@ effectively and reproducibly with data in Juypter notebooks.
 <p>
 <b>The following are the overarching learning objectives for the curriculum.</b>
 <ul>
-<li>Understand the value of reproducible research practices for more effective research for current and future you.
-<li>Understand the value of reproducible research practices for advancing research as a whole.
-<li>Understand what is meant by making your research more reproducible.
-<li>Know practices to make your research more reproducible, in particular by using Jupyter Notebooks, and have the skills to do so.
-<li>Have the confidence and foundation to continue improving reproducibility of your research.
-<li>Understand what’s possible and they still can learn to be more effective with reproducible research.
+<li>Understand the value of reproducible research practices for more effective research for the current and future you.</li>
+<li>Understand the value of reproducible research practices for advancing research as a whole.</li>
+<li>Understand what is meant by making your research more reproducible.</li>
+<li>Know practices to make your research more reproducible, in particular by using Jupyter Notebooks, and have the skills to do so.</li>
+<li>Have the confidence and foundation to continue improving reproducibility of your research.</li>
+<li>Understand what’s possible to further advance reproducibility of your research.</li>
 </ul>
 
-<b>General workshop overiew:</b><a href=https://reproducible-science-curriculum.github.io/rr-jupyter-workshop/>https://reproducible-science-curriculum.github.io/rr-jupyter-workshop/</a> 
+<b>Please also see the <a href="https://reproducible-science-curriculum.github.io/rr-jupyter-workshop/">general overiew of the workshop and the curriculum</a>.
 </p>
 <p>
 Participants should bring their laptops and plan to participate actively. By the end of the workshop learners should be able to more effectively manage and analyze data and be able to apply the tools and approaches directly to their ongoing research.
@@ -88,7 +88,7 @@ Participants should bring their laptops and plan to participate actively. By the
 -->
 <p>
   <strong>Who:</strong>
-This workshop is aimed at graduate students, postdocs, and other researchers who perform computational analysis or work. The material uses basic Python for teaching and illustrating the key concepts. Advanced knowledge of Python is not needed, but some familiarity with Python will aid in absorbing the material.
+This workshop is aimed at graduate students, postdocs, and other researchers who perform computational analysis or work. The material uses basic Python and Jupyter Notebooks for teaching and illustrating the key concepts. Advanced knowledge of Python is not needed, but some familiarity with it will aid in absorbing the material.
 </p>
 
 <!--
