Fixes empty helpers and missing end of bold
Unlike the description in the CUSTOMIZING document, if there are no
helpers, an empty array will not prevent rendering of the helpers item.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ humantime: "9:00am - 5:00pm"    # human-readable time (e.g., "9:00 am - 4:30 pm"
 startdate: 2017-03-15      # use YYYY-MM-DD format like 2015-01-01
 enddate: 2017-03-16        # use YYYY-MM-DD format like 2015-01-02
 instructor: ["Karen Cranston (Duke, Biology)", "Hilmar Lapp (Duke, GCB)", "Dan Leehr (Duke, GCB)", "R. Burke Squires (NIAID)", "Jamie Whitacre (UC Berkeley)"]
-helper: [] # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
+helper: # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: "hilmar.lapp@duke.edu"      # contact email address for workshop organizer, such as "grace@hopper.org"
 etherpad: http://pad.software-carpentry.org/2017-03-15-duke         # optional (insert the URL for your Etherpad if you're using one)
 eventbrite:       # optional (insert the alphanumeric key for Eventbrite registration, e.g., "1234567890AB")
@@ -73,7 +73,7 @@ effectively and reproducibly with data in Juypter notebooks.
 <li>Understand what’s possible to further advance reproducibility of your research.</li>
 </ul>
 
-<b>Please also see the <a href="https://reproducible-science-curriculum.github.io/rr-jupyter-workshop/">general overiew of the workshop and the curriculum</a>.
+<strong>Please also see the <a href="https://reproducible-science-curriculum.github.io/rr-jupyter-workshop/">general overiew of the workshop and the curriculum</a>.</strong>
 </p>
 <p>
 Participants should bring their laptops and plan to participate actively. By the end of the workshop learners should be able to more effectively manage and analyze data and be able to apply the tools and approaches directly to their ongoing research.
