--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@ layout: workshop      # DON'T CHANGE THIS.
 root: .               # DON'T CHANGE THIS.
 venue: "Duke University, Perkins LINK 072 (Classroom 6)"        # brief name of host site without address (e.g., "Euphoric State University")
 address: "Perkins LINK 072 (Classroom 6)"      # street address of workshop (e.g., "123 Forth Street, Blimingen, Euphoria")
-country: "US"      # country (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_3166-1)
+country: "us"      # country (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_3166-1)
 language: "en"     # language (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_639-1)
 latlng: "36.00260,-78.93848"       # fractional latitude and longitude (e.g., "41.7901128,-87.6007318"; you can use http://www.latlong.net/)
-humandate: "March 15-16, 2017"    # human-readable date (e.g., "Feb 17-18, 2020")
+humandate: "Mar 15-16, 2017"    # human-readable date (e.g., "Feb 17-18, 2020")
 humantime: "9:00am - 5:00pm"    # human-readable time (e.g., "9:00 am - 4:30 pm")
 startdate: 2017-03-15      # use YYYY-MM-DD format like 2015-01-01
 enddate: 2017-03-16        # use YYYY-MM-DD format like 2015-01-02
@@ -58,8 +58,8 @@ day2_pm: "Publishing and Sharing"
 
 
 <p>
-This hands-on workshop teaches basic concepts, skills and tools for working more 
-effectively and reproducibly with data in Juypter notebooks. 
+This hands-on workshop teaches basic concepts, skills and tools for working more
+effectively and reproducibly with data in Juypter notebooks.
 </p>
 
 <p>
@@ -116,7 +116,7 @@ This workshop is aimed at graduate students, postdocs, and other researchers who
   Modify the block below if there are any special requirements.
 -->
 <p>
-  <strong>Requirements:</strong> Participants must bring a laptop with a 
+  <strong>Requirements:</strong> Participants must bring a laptop with a
   Mac, Linux, or Windows operating sytem (not a tablet, Chromebook, etc.) that they have administrative privileges
   on. They should have a few specific software packages installed (listed
   <a href="#setup">below</a>). They are also required to abide by
@@ -163,8 +163,8 @@ This workshop is aimed at graduate students, postdocs, and other researchers who
       <tr> <td>Morning</td>  <td>{{page.day1_am}}</td> </tr>
        <tr> <td>Afternoon</td>  <td>{{page.day1_pm}}</td> </tr>
     </table>
- 
- 
+
+
     <h3>Day 2</h3>
     <table class="table table-striped">
       <tr> <td>Morning</td>  <td>{{page.day2_am}}</td> </tr>
@@ -214,21 +214,48 @@ This workshop is aimed at graduate students, postdocs, and other researchers who
   'tools/check' as well.
 -->
 <!--
+
 <h2>Syllabus</h2>
 
 <div class="row">
   <div class="col-md-6">
-    <h3>The Unix Shell</h3>
+    <h3>Introduction</h3>
     <ul>
-      <li>Files and directories</li>
-      <li>History and tab completion</li>
-      <li>Pipes and redirection</li>
-      <li>Looping over files</li>
-      <li>Creating and running shell scripts</li>
-      <li>Finding things</li>
-      <li><a href="{{site.swc_lessons}}/ref/01-shell.html">Reference...</a></li>
+      <li></li>
     </ul>
   </div>
+  <div class="col-md-6">
+    <h3>Data & Project Organization</h3>
+    <ul>
+      <li>Evaluating data for reproducibility</li>
+      <li>Organizing project files and directories</li>
+      <li>Writing metadata files</li>
+      <li>Modifying data reproducibly</li>
+    </ul>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-6">
+    <h3>Data Exploration</h3>
+    <ul>
+      <li></li>
+    </ul>
+  </div>
+  <div class="col-md-6">
+    <h3>Automation</h3>
+    <ul>
+      <li></li>
+    </ul>
+  </div>
+  <div class="col-md-6">
+    <h3>Publishing and Sharing</h3>
+    <ul>
+      <li></li>
+    </ul>
+  </div>
+</div>
+-->
+<!-- Default syllabus for reference
   <div class="col-md-6">
     <h3>Programming in Python</h3>
     <ul>
@@ -306,15 +333,15 @@ This workshop is aimed at graduate students, postdocs, and other researchers who
 
 <h2 id="setup">Setup</h2>
 
-To participate in this workshop, you will need working copies of the 
-described software. Please make sure to install everything (or at least to download 
-the installers) before the start of your workshop. Participants should bring and use 
-their own laptops to insure the proper setup of tools for an efficient workflow 
+To participate in this workshop, you will need working copies of the
+described software. Please make sure to install everything (or at least to download
+the installers) before the start of your workshop. Participants should bring and use
+their own laptops to insure the proper setup of tools for an efficient workflow
 once you leave the workshop.
 
 <h3>Jupyter notebook</h3>
 
-The best way to install the Jupyter notebook is to use Anaconda. 
+The best way to install the Jupyter notebook is to use Anaconda.
 <p>
 Regardless of how you choose to install it, please make sure you install Python version 3.x (e.g., 3.4 is fine).
 <p>
@@ -332,5 +359,5 @@ Regardless of how you choose to install it, please make sure you install Python 
 <ol>
 <li> Open <a href=http://continuum.io/downloads>http://continuum.io/downloads</a> with your web browser.
 <li> Download the Python 3 installer for Mac OSX.
-<li> Install Python 3 using all of the defaults for installation 
+<li> Install Python 3 using all of the defaults for installation
 </ol>
