--- a/index.html
+++ b/index.html
@@ -339,25 +339,82 @@ the installers) before the start of your workshop. Participants should bring and
 their own laptops to insure the proper setup of tools for an efficient workflow
 once you leave the workshop.
 
-<h3>Jupyter notebook</h3>
-
+<h3>
+	Jupyter notebook
+</h3>
 The best way to install the Jupyter notebook is to use Anaconda.
 <p>
-Regardless of how you choose to install it, please make sure you install Python version 3.x (e.g., 3.4 is fine).
-<p>
+	Regardless of how you choose to install it, please make sure you install Python version 3.x (e.g., 3.4 is fine).
+	<p>
+		<div class="row">
+			<div class="col-md-6">
+				<h4>
+					Windows
+				</h3>
+				<ol>
+					<li> Open <a href="http://continuum.io/downloads">http://continuum.io/downloads</a> with your web browser.
+					<li> Download the Python 3 installer for Windows.
+					<li> Install Python 3 using all of the defaults for installation except make sure to check *Make Anaconda the default Python*.
+				</ol>
+			</div>
+			<div class="col-md-6">
+				<h4>
+					Mac OSX
+				</h3>
+				<ol>
+					<li> Open <a href="http://continuum.io/downloads">http://continuum.io/downloads</a> with your web browser.
+					<li> Download the Python 3 installer for Mac OSX.
+					<li> Install Python 3 using all of the defaults for installation
+				</ol>
+			</div>
+		</div>
 
-<h3>Windows</h3>
+<div id="editor"> <!-- Start of 'editor' section. -->
+  <h3>Text Editor</h3>
 
-<ol>
-<li> Open <a href=http://continuum.io/downloads>http://continuum.io/downloads</a> with your web browser.
-<li> Download the Python 3 installer for Windows.
-<li> Install Python 3 using all of the defaults for installation except make sure to check *Make Anaconda the default Python*.
-</ol>
+  <p>
+    When you're writing code, it's nice to have a text editor that is
+    optimized for writing code, with features like automatic
+    color-coding of key words.  The default text editor on Mac OS X and
+    Linux is usually set to Vim, which is not famous for being
+    intuitive.  if you accidentally find yourself stuck in it, try
+    typing the escape key, followed by <code>:q!</code> (colon, lower-case 'q',
+    exclamation mark), then hitting Return to return to the shell.
+  </p>
 
-<h3>Mac OSX</h3>
-
-<ol>
-<li> Open <a href=http://continuum.io/downloads>http://continuum.io/downloads</a> with your web browser.
-<li> Download the Python 3 installer for Mac OSX.
-<li> Install Python 3 using all of the defaults for installation
-</ol>
+  <div class="row">
+    <div class="col-md-6">
+      <h4 id="editor-windows">Windows</h4>
+      <a href="https://www.youtube.com/watch?v=339AEqk9c-8">Video Tutorial</a>
+      <p>
+        nano is a basic editor and the default that instructors use in the workshop.
+        To install it,
+        download the <a href="{{site.swc_installer}}">Software Carpentry Windows installer</a>
+        and double click on the file to run it.
+        <strong>This installer requires an active internet connection.</strong>
+      </p>
+      <p>
+        Others editors that you can use are
+        <a href="http://notepad-plus-plus.org/">Notepad++</a> or
+        <a href="http://www.sublimetext.com/">Sublime Text</a>.
+        <strong>Be aware that you must
+          add its installation directory to your system path.</strong>
+        Please ask your instructor to help you do this.
+      </p>
+    </div>
+    <div class="col-md-6">
+      <h4 id="editor-macosx">Mac OS X</h4>
+      <p>
+        nano is a basic editor and the default that instructors use in the workshop.
+        See the Git installation <a href="https://www.youtube.com/watch?v=9LQhwETCdwY ">video tutorial</a>
+        for an example on how to open nano.
+        It should be pre-installed.
+      </p>
+      <p>
+        Others editors that you can use are
+        <a href="http://www.barebones.com/products/textwrangler/">Text Wrangler</a> or
+        <a href="http://www.sublimetext.com/">Sublime Text</a>.
+      </p>
+    </div>
+  </div>
+</div> <!-- End of 'editor' section. -->
