--- a/index.html
+++ b/index.html
@@ -348,9 +348,7 @@ The best way to install the Jupyter notebook is to use Anaconda.
 	<p>
 		<div class="row">
 			<div class="col-md-6">
-				<h4>
-					Windows
-				</h3>
+				<h4>Windows</h4>
 				<ol>
 					<li> Open <a href="http://continuum.io/downloads">http://continuum.io/downloads</a> with your web browser.
 					<li> Download the Python 3 installer for Windows.
@@ -358,9 +356,7 @@ The best way to install the Jupyter notebook is to use Anaconda.
 				</ol>
 			</div>
 			<div class="col-md-6">
-				<h4>
-					Mac OSX
-				</h3>
+				<h4>Mac OSX</h4>
 				<ol>
 					<li> Open <a href="http://continuum.io/downloads">http://continuum.io/downloads</a> with your web browser.
 					<li> Download the Python 3 installer for Mac OSX.
