Adds syllabus items for Publishing lesson

--- a/index.html
+++ b/index.html
@@ -249,7 +249,10 @@ This workshop is aimed at graduate students, postdocs, and other researchers who
   <div class="col-md-6">
     <h3>Publishing and Sharing</h3>
     <ul>
-      <li></li>
+      <li>Exporting the Notebook</li>
+      <li>Documentation</li>
+      <li>Record-level Metadata</li>
+      <li>Publication: Identifiers and licensing for research products.</li>
     </ul>
   </div>
 </div>
