Adds syllabus for Intro lesson

--- a/index.html
+++ b/index.html
@@ -220,7 +220,10 @@ This workshop is aimed at graduate students, postdocs, and other researchers who
   <div class="col-md-6">
     <h3>Introduction</h3>
     <ul>
-      <li></li>
+      <li>Intro to and motivation for reproducibile research</li>
+      <li>Intro to Jupyter Notebooks</li>
+      <li>Navigating the Notebook</li>
+      <li>Python and Jupyter Resources</li>
     </ul>
   </div>
   <div class="col-md-6">
