--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ This workshop is aimed at graduate students, postdocs, and other researchers who
     </ul>
   </div>
   <div class="col-md-6">
-    <h3>Data & Project Organization</h3>
+    <h3>Data &amp; Project Organization</h3>
     <ul>
       <li>Evaluating data for reproducibility</li>
       <li>Organizing project files and directories</li>
