Adds link to organization lesson

--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@ This workshop is aimed at graduate students, postdocs, and other researchers who
       <li>Writing metadata files</li>
       <li>Modifying data reproducibly</li>
     </ul>
+    <span><a href="https://reproducible-science-curriculum.github.io/organization-RR-Jupyter/">Lesson Materials</a></span>
   </div>
 </div>
 <div class="row">
