--- a/index.html
+++ b/index.html
@@ -246,7 +246,13 @@ This workshop is aimed at graduate students, postdocs, and other researchers who
   <div class="col-md-6">
     <h3>Automation</h3>
     <ul>
-      <li></li>
+      <li>Best practices of variable naming</li>
+	<li>Learn about "Don't Repeat Yourself" (DRY)</li>
+	<li>Modularizing your code</li>
+	<li>Refactoring your code</li>
+	<li>Defining functions</li>
+	<li>Importing custom functions and using in a Jupyter notebook</li>
+	<li>(If time permits) Basic python testing</li>
     </ul>
   </div>
   <div class="col-md-6">
