Materials and downloads for Data Exploration

--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@ This workshop is aimed at graduate students, postdocs, and other researchers who
       <li>Summarizing data</li>
       <li>Visualization with Matplotlib &amp; Seaborn</li>
     </ul>
+    <span><a href="https://github.com/Reproducible-Science-Curriculum/data-exploration-RR-Jupyter">Lesson materials</a> and <a href="https://github.com/Reproducible-Science-Curriculum/data-exploration-RR-Jupyter/releases/tag/data-v0.1.0">download</a></span>
   </div>
 <div class="row">
   <div class="col-md-6">
