--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ This workshop is aimed at graduate students, postdocs, and other researchers who
       <li>Importing custom functions and using in a Jupyter notebook</li>
       <li>Basic python testing (time permitting)</li>
     </ul>
-    <span><a href="https://github.com/Reproducible-Science-Curriculum/automation-RR-Jupyter">Lesson materials</a>, <a href="https://raw.githubusercontent.com/Reproducible-Science-Curriculum/organization-RR-Jupyter/gh-pages/live/projects/gapminder/data/02_cleaned/gapminderDataFiveYear_sortacleaned.txt">Data download</a></span>
+    <span><a href="https://github.com/Reproducible-Science-Curriculum/automation-RR-Jupyter">Lesson materials</a>, <a href="https://raw.githubusercontent.com/Reproducible-Science-Curriculum/automation-RR-Jupyter/master/gapminder_cleaned.csv">Data download</a></span>
   </div>
   <div class="col-md-6">
     <h3>Publishing and Sharing</h3>
